<resources>
    <string name="app_name">Calculator</string>

    // Buttons 1 through 9 and 0
    <string name="one">1</string>
    <string name="two">2</string>
    <string name="three">3</string>
    <string name="four">4</string>
    <string name="five">5</string>
    <string name="six">6</string>
    <string name="seven">7</string>
    <string name="eight">8</string>
    <string name="nine">9</string>
    <string name="zero">0</string>

    // Operation Buttons
    <string name="add">+</string>
    <string name="subtract">-</string>
    <string name="multiply">*</string>
    <string name="divide">/</string>

    // Rest of the Buttons
    <string name="decimal">.</string>
    <string name="delete">C</string>
    <string name="clear">CC</string>
    <string name="equals">=</string>

    // TextView Display
    <string name="underscore">_</string>
    <string name="error">ERR</string>

    <string name="deleteText"> </string>

</resources>
